// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col"
>
  <h4
    className="mb-2"
  >
    Please select your age:
  </h4>
  <div
    className="mb-2 ml-2"
  >
    <label
      className="sc-kPJBXH eSqqzw"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-lgpvoJ brQUoX"
        id="age1"
        name="age"
        type="radio"
      />
      <figure
        className="sc-imfVFo biApTi"
      />
      <span
        className="sc-hVAcom jcSRRe"
      >
        0 - 30
      </span>
    </label>
  </div>
  <div
    className="mb-2 ml-2"
  >
    <label
      className="sc-kPJBXH eSqqzw"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-lgpvoJ brQUoX"
        id="age2"
        name="age"
        type="radio"
      />
      <figure
        className="sc-imfVFo biApTi"
      />
      <span
        className="sc-hVAcom jcSRRe"
      >
        31 - 60
      </span>
    </label>
  </div>
  <div
    className="mb-2 ml-2"
  >
    <label
      className="sc-kPJBXH eSqqzw"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-lgpvoJ brQUoX"
        id="age3"
        name="age"
        type="radio"
      />
      <figure
        className="sc-imfVFo biApTi"
      />
      <span
        className="sc-hVAcom jcSRRe"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-kPJBXH eSqqzw"
>
  <input
    checked={true}
    className="sc-lgpvoJ brQUoX"
    readOnly={true}
    type="radio"
  />
  <figure
    className="sc-imfVFo biApTi"
  />
  <span
    className="sc-hVAcom jcSRRe"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-kPJBXH eSqqzw"
>
  <input
    className="sc-lgpvoJ brQUoX"
    disabled={true}
    type="radio"
  />
  <figure
    className="sc-imfVFo biApTi"
  />
  <span
    className="sc-hVAcom jcSRRe"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <h4
      className="mb-2"
    >
      Please select your age:
    </h4>
    <div
      className="mb-2 ml-2"
    >
      <label
        className="sc-kPJBXH eSqqzw"
        htmlFor="age1"
      >
        <input
          aria-label="0 - 30"
          className="sc-lgpvoJ brQUoX"
          id="age1"
          name="age"
          type="radio"
        />
        <figure
          className="sc-imfVFo biApTi"
        />
        <span
          className="sc-hVAcom jcSRRe"
        >
          0 - 30
        </span>
      </label>
    </div>
    <div
      className="mb-2 ml-2"
    >
      <label
        className="sc-kPJBXH eSqqzw"
        htmlFor="age2"
      >
        <input
          aria-label="31 - 60"
          className="sc-lgpvoJ brQUoX"
          id="age2"
          name="age"
          type="radio"
        />
        <figure
          className="sc-imfVFo biApTi"
        />
        <span
          className="sc-hVAcom jcSRRe"
        >
          31 - 60
        </span>
      </label>
    </div>
    <div
      className="mb-2 ml-2"
    >
      <label
        className="sc-kPJBXH eSqqzw"
        htmlFor="age3"
      >
        <input
          aria-label="61 - 100"
          className="sc-lgpvoJ brQUoX"
          id="age3"
          name="age"
          type="radio"
        />
        <figure
          className="sc-imfVFo biApTi"
        />
        <span
          className="sc-hVAcom jcSRRe"
        >
          61 - 100
        </span>
      </label>
    </div>
  </div>
</div>
`;
